<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />

        <item android:title="@string/nav_cloud_share">

            <menu>

                <group android:checkableBehavior="single">

                    <item
                        android:id="@+id/nav_explore"
                        android:icon="@drawable/ic_folder_shared_black_24dp"
                        android:title="@string/nav_explore" />
                    <item
                        android:id="@+id/nav_upload"
                        android:icon="@drawable/ic_file_upload_black_24dp"
                        android:title="@string/nav_uploads" />
                    <item
                        android:id="@+id/nav_starred"
                        android:icon="@drawable/ic_star_black_24dp"
                        android:title="@string/nav_stars" />
                    <item
                        android:id="@+id/nav_downloaded"
                        android:icon="@drawable/ic_file_download_black_24dp"
                        android:title="@string/nav_downloads" />

                </group>

            </menu>

        </item>

    </group>

    <item android:title="@string/nav_misc">

        <menu>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/nav_logout" />

        </menu>

    </item>

</menu>
