<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/login_base"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <ImageView
        android:layout_width="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher_background"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image" />

    <android.support.v7.widget.CardView
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        card:contentPadding="16dp"
        xmlns:card="http://schemas.android.com/apk/res-auto"
        card:cardCornerRadius="2dp"
        card:cardElevation="8dp"
        android:layout_height="wrap_content"
        android:id="@+id/cardviewlogin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/logo"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/logo_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_below="@+id/logo"
                android:id="@+id/t1"
                android:text="@string/login_welcome_text"/>

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/email_textInput"
                android:layout_marginBottom="8dp"
                android:layout_below="@+id/t1">

                <EditText
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/login_sap_edittext" />

            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_textInput"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:id="@+id/password_textinput">

                <EditText

                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="99"
                    android:inputType="textPassword"
                    android:hint="@string/login_password_edittext"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/login_sign_in"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textStyle="bold"
                android:text="@string/login_button_text"
                android:layout_below="@+id/password_textinput"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>