<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/disk_util_label"
                android:text="@string/disk_utilization_label"/>

            <ImageView
                android:id="@+id/disk_util_no_uploads_icon"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_marginTop="2dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_file_upload_black_24dp"
                android:layout_toEndOf="@id/disk_util_label"
                android:contentDescription="@string/placeholder_icon_logo" />

            <TextView
                android:id="@+id/disk_util_no_of_uploads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/disk_util_no_uploads_icon"
                android:text="@string/placeholder_digit3"/>

            <TextView
                android:id="@+id/disk_utilization_string"
                android:gravity="end"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/disk_util_no_of_uploads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disk_utilization_placeholder"/>

        </RelativeLayout>


        <com.daimajia.numberprogressbar.NumberProgressBar
            android:id="@+id/number_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:progress_max="100"
            app:progress_current="40"/>


    </LinearLayout>



</android.support.v7.widget.CardView>