<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/user_detail_user_image"
        android:layout_width="320dp"
        android:layout_height="240dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher_background" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="32dp">

        <TextView
            android:id="@+id/user_detail_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/placeholder_text"/>

        <TextView
            android:id="@+id/user_detail_user_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text"/>

        <LinearLayout
            android:id="@+id/user_detail_student_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="SAP ID"/>

            <TextView
                android:id="@+id/user_detail_student_sap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_digit5"/>

            <TextView
                android:textColor="@color/colorAccent"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Class"/>


            <TextView
                android:id="@+id/user_detail_student_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_char"/>

        </LinearLayout>

        <TextView
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="About Me"/>

        <TextView
            android:id="@+id/user_detail_user_bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="5"
            android:ellipsize="end"
            android:text="@string/placeholder_text_extra_long"/>

    </LinearLayout>

</LinearLayout>
