<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/file_card"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    app:cardCornerRadius="2dp"
    app:cardUseCompatPadding="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_image_black_24dp"
            android:id="@+id/file_rv_type_img"
            android:layout_alignParentTop="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FAFAFA"
            android:layout_below="@id/file_rv_type_img">

            <LinearLayout
                android:id="@+id/file_title_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/file_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/placeholder_text"/>

                <ImageView
                    android:id="@+id/file_download_status"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="8dp"
                    android:visibility="invisible"
                    android:src="@drawable/ic_cloud_download_black_24dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/file_uploaded_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_below="@id/file_title_holder"
                android:layout_marginBottom="16dp"
                android:textSize="12sp"
                android:text="@string/placeholder_date"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:orientation="horizontal"
                android:layout_below="@id/file_title_holder"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="12dp"
                android:layout_alignParentEnd="true"
                android:id="@+id/file_stat_holder">

                <ImageView
                    android:id="@+id/file_stars_icon"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/ic_star_black_24dp"/>

                <TextView
                    android:id="@+id/file_no_stars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/placeholder_digit3"/>

                <ImageView
                    android:id="@+id/file_downloads_icon"
                    android:layout_marginStart="8dp"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/ic_file_download_black_24dp"/>

                <TextView
                    android:id="@+id/file_no_downloads"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/placeholder_digit3"/>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>
